--- a/MyApp/src/Edit/edit.html
+++ b/MyApp/src/Edit/edit.html
@@ -3,9 +3,474 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
+    <!-- Include this for navbar -->
+    <script>
+        function loadNavbar() {
+            fetch('../../assets/navbar/navbar.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('navbar').innerHTML = data;
+                });
+        }
+        window.onload = loadNavbar;
+      </script>
+
+    <title>Edit Load Plan</title>
 </head>
 <body>
-    
+    <div id="navbar"></div>
+
+    <div class="container-fluid bg-white d-flex justify-content-center p-3 border border-2">
+        <span id="filename" class="krona-one-regular">FILENAME.xlsx</span>
+    </div>
+
+    <div style="height:500px" class="rounded-2 bg-light table-responsive">
+        <table class="table align-middle text-center table-hover table-bordered">
+            <thead class="barlow-regular align-middle table-dark">
+                <tr>
+                    <th colspan="2" scope="col"></th>
+                    <th scope="col">RDD</th>
+                    <th scope="col">Plant</th>
+                    <th scope="col">System Route</th>
+                    <th scope="col">Final Route</th>
+                    <th scope="col">Sales Order</th>
+                    <th scope="col">Outbound Deliveries</th>
+                    <th scope="col">Store Code</th>
+                    <th scope="col">SEQ</th>
+                    <th scope="col">Customer Name</th>
+                    <th scope="col">Vol</th>
+                    <th scope="col">Weight</th>
+                    <th scope="col">TON</th>
+                    <th scope="col">LOADDATE</th>
+                    <th scope="col">MIX</th>
+                    <th scope="col">CALL TIME</th>
+                    <th scope="col">Window</th>
+                    <th scope="col">DROP</th>
+                    <th scope="col">Weight Utilization</th>
+                </tr>
+            </thead>
+            <tbody class="barlow-light">
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <!-- Sample Data -->
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+                <tr>
+                <td colspan="2">
+                    <div class="px-1 d-flex justify-content-center">
+                    <a class="delete-btn" href="#">
+                        <i class="bi bi-x-square"></i>
+                    </a>
+                    </div>
+                </td>
+                <td>03/10/2024</td>
+                <td>ZL06</td>
+                <td>ZUEUUA</td>
+                <td>ZEUREE</td>
+                <td>12345612</td>
+                <td>19237</td>
+                <td>10023</td>
+                <td>1</td>
+                <td>Brianna Salvador</td>
+                <td>0.231</td>
+                <td>1.2302</td>
+                <td>4WT2</td>
+                <td>05/10/2024</td>
+                <td>02/10/2024 08:00</td>
+                <td>8:00:00 AM</td>
+                <td>16:00-19:00</td>
+                <td>12</td>
+                <td>90%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="d-flex justify-content-between p-0 mx-4 mt-3">
+        <div class="d-flex gap-3 justify-content-end">
+            <button id="options" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
+                Sort by Load Time
+            </button>
+            <button id="options" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
+                Group by Customer Name
+            </button>
+            <button id="options" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
+                Edit Existing Routes
+            </button>
+        </div>
+
+        <div class="d-flex justify-content-start">
+            <button id="options" type="button" class="btn btn-light">
+                <i class="me-1 bi bi-floppy"></i>
+                Save File</button>
+        </div>
+    </div>
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+  <script src="../renderer.js"></script>
 </body>
 </html>
