--- a/MyApp/src/Load Plan/upload.html
+++ b/MyApp/src/Load Plan/upload.html
@@ -48,10 +48,10 @@
           Filter Options
         </button>
 
-        <button id="options" class="p-2 px-3 btn btn-light barlow-regular">
+        <a href="../Edit/edit.html" id="editBtn" class="p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-1"><i class="bi bi-pencil-square"></i></span>
           Edit Load Plan
-        </button>
+        </a>
       </div>
 
       <div class="d-flex justify-content-end">
@@ -73,7 +73,6 @@
         <table style="max-height: 1rem;" class="table align-middle text-center table-hover table-bordered">
           <thead class="barlow-regular align-middle table-dark">
             <tr>
-              <th colspan="2" scope="col"></th>
               <th scope="col">RDD</th>
               <th scope="col">Plant</th>
               <th scope="col">System Route</th>
@@ -92,13 +91,6 @@
           </thead>
           <tbody class="barlow-light">
             <tr>
-              <td colspan="2">
-                <div class="px-1 d-flex justify-content-center">
-                  <a class="delete-btn" href="#">
-                    <i class="bi bi-x-square"></i>
-                  </a>
-                </div>
-              </td>
               <td>03/10/2024</td>
               <td>ZL06</td>
               <td>ZUEUUA</td>
@@ -115,13 +107,6 @@
               <td>02/10/2024 08:00</td>
             </tr>
             <tr>
-              <td colspan="2">
-                <div class="px-1 d-flex justify-content-center">
-                  <a class="delete-btn" href="#">
-                    <i class="bi bi-x-square"></i>
-                  </a>
-                </div>
-              </td>
               <td>03/10/2024</td>
               <td>ZL06</td>
               <td>ZUEUUA</td>
@@ -138,13 +123,6 @@
               <td>02/10/2024 08:00</td>
             </tr>
             <tr>
-              <td colspan="2">
-                <div class="px-1 d-flex justify-content-center">
-                  <a class="delete-btn" href="#">
-                    <i class="bi bi-x-square"></i>
-                  </a>
-                </div>
-              </td>
               <td>03/10/2024</td>
               <td>ZL06</td>
               <td>ZUEUUA</td>
@@ -161,13 +139,6 @@
               <td>02/10/2024 08:00</td>
             </tr>
             <tr>
-              <td colspan="2">
-                <div class="px-1 d-flex justify-content-center">
-                  <a class="delete-btn" href="#">
-                    <i class="bi bi-x-square"></i>
-                  </a>
-                </div>
-              </td>
               <td>03/10/2024</td>
               <td>ZL06</td>
               <td>ZUEUUA</td>
@@ -184,13 +155,102 @@
               <td>02/10/2024 08:00</td>
             </tr>
             <tr>
-              <td colspan="2">
-                <div class="px-1 d-flex justify-content-center">
-                  <a class="delete-btn" href="#">
-                    <i class="bi bi-x-square"></i>
-                  </a>
-                </div>
-              </td>
+              <td>03/10/2024</td>
+              <td>ZL06</td>
+              <td>ZUEUUA</td>
+              <td>ZEUREE</td>
+              <td>12345612</td>
+              <td>19237</td>
+              <td>10023</td>
+              <td>1</td>
+              <td>Brianna Salvador</td>
+              <td>0.231</td>
+              <td>1.2302</td>
+              <td>4WT2</td>
+              <td>05/10/2024</td>
+              <td>02/10/2024 08:00</td>
+            </tr>
+            <tr>
+              <td>03/10/2024</td>
+              <td>ZL06</td>
+              <td>ZUEUUA</td>
+              <td>ZEUREE</td>
+              <td>12345612</td>
+              <td>19237</td>
+              <td>10023</td>
+              <td>1</td>
+              <td>Brianna Salvador</td>
+              <td>0.231</td>
+              <td>1.2302</td>
+              <td>4WT2</td>
+              <td>05/10/2024</td>
+              <td>02/10/2024 08:00</td>
+            </tr>
+            <tr>
+              <td>03/10/2024</td>
+              <td>ZL06</td>
+              <td>ZUEUUA</td>
+              <td>ZEUREE</td>
+              <td>12345612</td>
+              <td>19237</td>
+              <td>10023</td>
+              <td>1</td>
+              <td>Brianna Salvador</td>
+              <td>0.231</td>
+              <td>1.2302</td>
+              <td>4WT2</td>
+              <td>05/10/2024</td>
+              <td>02/10/2024 08:00</td>
+            </tr>
+            <tr>
+              <td>03/10/2024</td>
+              <td>ZL06</td>
+              <td>ZUEUUA</td>
+              <td>ZEUREE</td>
+              <td>12345612</td>
+              <td>19237</td>
+              <td>10023</td>
+              <td>1</td>
+              <td>Brianna Salvador</td>
+              <td>0.231</td>
+              <td>1.2302</td>
+              <td>4WT2</td>
+              <td>05/10/2024</td>
+              <td>02/10/2024 08:00</td>
+            </tr>
+            <tr>
+              <td>03/10/2024</td>
+              <td>ZL06</td>
+              <td>ZUEUUA</td>
+              <td>ZEUREE</td>
+              <td>12345612</td>
+              <td>19237</td>
+              <td>10023</td>
+              <td>1</td>
+              <td>Brianna Salvador</td>
+              <td>0.231</td>
+              <td>1.2302</td>
+              <td>4WT2</td>
+              <td>05/10/2024</td>
+              <td>02/10/2024 08:00</td>
+            </tr>
+            <tr>
+              <td>03/10/2024</td>
+              <td>ZL06</td>
+              <td>ZUEUUA</td>
+              <td>ZEUREE</td>
+              <td>12345612</td>
+              <td>19237</td>
+              <td>10023</td>
+              <td>1</td>
+              <td>Brianna Salvador</td>
+              <td>0.231</td>
+              <td>1.2302</td>
+              <td>4WT2</td>
+              <td>05/10/2024</td>
+              <td>02/10/2024 08:00</td>
+            </tr>
+            <tr>
               <td>03/10/2024</td>
               <td>ZL06</td>
               <td>ZUEUUA</td>
@@ -276,6 +336,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="../renderer.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
