--- a/MyApp/src/Load Plan/upload.html
+++ b/MyApp/src/Load Plan/upload.html
@@ -38,7 +38,7 @@
     <div class="mx-5 mt-3 mb-4 d-flex justify-content-between">
       <div class="d-flex justify-content-start">
         <input type="file" id="upload-file">
-        <label for="upload-file" id="options" class="p-2 px-3 btn btn-light barlow-regular">
+        <label for="upload-file" id="upload" class="p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-2"><i class="bi bi-upload"></i></span>
           Upload Load Plan File
         </label>
@@ -54,22 +54,12 @@
         </a>
       </div>
 
-      <div class="d-flex justify-content-end">
-        <button id="options" data-bs-toggle="modal" data-bs-target="#apply-changes" type="button" class="me-3 p-2 px-3 btn btn-light barlow-regular">
-          <span class="pe-1"><i class="bi bi-check2-square"></i></span>
-          Apply Changes
-        </button>
-  
-        <button id="options" type="button" class="p-2 px-3 btn btn-light barlow-regular">
-          <span class="pe-1"><i class="bi bi-download"></i></span>
-          Download File
-        </button>
-      </div>
+ 
       
     </div>
 
     <div class="d-flex justify-content-center">
-      <div style="width: 100%; height:450px; max-height:450px; overflow-y: auto;" class="mx-5 rounded-2 bg-light table-responsive">
+      <div id="route-table-container" style="width: 100%; height:450px; max-height:450px; overflow-y: auto;" class="mx-5 rounded-2 bg-light table-responsive">
         <table style="max-height: 1rem;" class="table align-middle text-center table-hover table-bordered">
           <thead class="barlow-regular align-middle table-dark">
             <tr>
@@ -89,183 +79,8 @@
               <th scope="col">MIX</th>
             </tr>
           </thead>
-          <tbody class="barlow-light">
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
-            <tr>
-              <td>03/10/2024</td>
-              <td>ZL06</td>
-              <td>ZUEUUA</td>
-              <td>ZEUREE</td>
-              <td>12345612</td>
-              <td>19237</td>
-              <td>10023</td>
-              <td>1</td>
-              <td>Brianna Salvador</td>
-              <td>0.231</td>
-              <td>1.2302</td>
-              <td>4WT2</td>
-              <td>05/10/2024</td>
-              <td>02/10/2024 08:00</td>
-            </tr>
+          <tbody id="route-table-body">
+
           </tbody>
         </table>
       </div>  
