--- a/MyApp/src/Home/home.html
+++ b/MyApp/src/Home/home.html
@@ -45,7 +45,12 @@
         <div id="content" class="container-fluid d-flex justify-content-end">
           <div class="d-flex flex-column align-items-end"> 
             <button id="loadPlanBtn" type="button" class="btn btn-primary mt-2">Create Load Plan</button>
-           
+<!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> 
+            <input type="file" id="import-csv" accept=".csv" style="display: none;">
+
+            <!-- Visible Button -->
+            <button type="button" id="upload-btn" class="btn btn-primary mt-3">Upload Load Plan</button>
+<!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> <!-- Test --> 
             <button id="kpiBtn" type="button" class="btn btn-primary mt-1">KPI</button>
         </div>
     </div>
